--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,13 @@ dependencies:
   pdf: ^3.10.8
   printing: ^5.12.0
   intl: ^0.19.0
+  esc_pos_utils_plus: 2.0.4
+  image: ^4.0.17
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  msix: ^3.16.12
+  esc_pos_printer_plus: 0.1.1
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +61,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - packages/esc_pos_utils_plus/resources/capabilities.json
+    - assets/images/mr_hungry_logo.jpeg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
