Refactor project structure and rename from enterprise_pos to counter_iq
- Updated import paths across multiple files to reflect the new package name.
- Changed application identifiers and binary names in CMakeLists.txt and Xcode project files.
- Modified web and macOS configurations to use the new app name.
- Adjusted Windows runner resources to reflect the new application name.
- Updated pubspec.yaml and pubspec.lock to include new dependencies and reflect the project name change.

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "enterprise_pos",
-    "short_name": "enterprise_pos",
+    "name": "counter_iq",
+    "short_name": "counter_iq",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
