--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: enterprise_pos
+name: counter_iq
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -45,6 +45,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   esc_pos_printer_plus: 0.1.1
+  msix: ^3.16.12
 
 dev_dependencies:
   flutter_test:
@@ -113,5 +114,5 @@ msix_config:
   capabilities: internetClient
 
   publisher: "CN=Moeez"
-  certificate_path: "D:\\folder-e\\learning\\flutter\\enterprise_pos\\windows\\signing\\moeez_codesign.pfx"
+  certificate_path: "D:\\folder-e\\learning\\flutter\\burger_pos\\windows\\signing\\moeez_codesign.pfx"
   certificate_password: "Moeez@123"
