feat: Update application name from Enterprise POS to Counter IQ

--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "moeez" "\0"
-            VALUE "FileDescription", "Enterprise POS" "\0"
+            VALUE "FileDescription", "Counter IQ" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "Enterprise POS" "\0"
+            VALUE "InternalName", "Counter IQ" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 moeez. All rights reserved." "\0"
             VALUE "OriginalFilename", "counter_iq.exe" "\0"
-            VALUE "ProductName", "Enterprise POS" "\0"
+            VALUE "ProductName", "Counter IQ" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
